Bugfix: add proper spacing in the workbench menu

--- a/sites/all/themes/mcneese/css/screen/screen-navigation.css
+++ b/sites/all/themes/mcneese/css/screen/screen-navigation.css
@@ -724,7 +724,12 @@
   padding: 0 0 0 12px;
 }
 
+#mcneese-page-side .workbench_menu .menu_item {
+  margin: 0 0 0 5px;
+}
+
 #mcneese-page-side .workbench_menu .menu_item.depth-0 {
+  margin: 0;
   padding: 0;
 }
 
